# celestian-mechanics-calculations-api

./: .env.example  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py  routes.py
app/api/v1/endpoints/: __init__.py  health.py
app/api/v1/routers/: __init__.py  coordinates.py  health.py
app/core/: __init__.py  config.py  constants.py
app/models/: __init__.py  coordinates_systems.py  responses.py
app/services/: __init__.py
app/services/calculations/: __init__.py  coordinate_conversions.py  orbital_mechanics.py
app/utils/: __init__.py  math_helpers.py
docs/: api.md  architecture.md  development.md  index.md  setup.md
tests/: conftest.py  test_math_helpers.py  test_settings.py
tests/api/: __init__.py
tests/api/v1/: test_health.py
